--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,5 +5,5 @@ Changelog
 0.0.6 - Tweak requirement
 0.0.7 - Catch invalid Access Token
 0.0.8 - Implement media stream
-
 v0.0.1.dev2 - Rebuild as a conventional Python package
+v0.0.2 - Update for latest version of Mezzanine and Django, switch to blocked images in tag page by default
